@startuml
'https://plantuml.com/sequence-diagram

class Solution46 {
    - {static} ArrayList<String> wordsInFile = new ArrayList<String>();
    - {static} ArrayList<ArrayList<String>> wordsCount = new ArrayList<ArrayList<String>>();

    }

class DisplayResults {
+ print();
}

class WordFrequency {
- {static} ArrayList<ArrayList<String>> wordsCount
+ calculateFrequency()
}
class ProcessFile {
    - {static} ArrayList<String> wordsInList
    - {static} String word;

    + read(String fileName)
    }

Solution46 *-- ProcessFile
Solution46 *-- WordFrequency
Solution46 *--- DisplayResults
@enduml